src/test/deca/syntax/valid/Objet/PremierObjet.deca
// Description:
//    Testing object-oriented Deca.
//
// Results:
//    (void)
//
// Historique:
//    cree le 13/01/2022

class A {}

class B extends A {}

{
    int x = 2;
    A a;
    A.equals(B);
}